frontendApp/base/frontend-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend-app
  name: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend-app
        image: quay.io/ravirhsharma/frontend:latest
        ports:
          - containerPort: 8080
            protocol: TCP
        resources: {}
status: {}
