frontendApp/base/frontend-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: frontend-app
  name: frontend-app
spec:
  ports:
  - name: 3000-tcp
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: frontend-app
status:
  loadBalancer: {}
