frontendApp/base/frontend-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: frontend-app
  name: frontend-app
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: frontend-app
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
